Import dependencies when importing typelibs from gi.repository

Recursively import a modules dependencies when importing from
gi.repository.

This fixes the case where a library depends on initialization
code of dependency overrides. For example libwnck expects
gdk_init to be called before using its API and gdk_init
gets called in the Gdk overrrides.

https://bugzilla.gnome.org/show_bug.cgi?id=656314